Now able to gracefully handle server communication issues when HTTP 200 is received, but the response is not in the expected format. Previously, this resulted in the following exception being displayed during each refresh cycle.
************** Exception Text **************
Newtonsoft.Json.JsonReaderException: Unexpected character encountered while parsing value: <. Path '', line 0, position 0.
   at Newtonsoft.Json.JsonTextReader.ParseValue()
   at Newtonsoft.Json.JsonTextReader.ReadInternal()
   at Newtonsoft.Json.JsonTextReader.Read()
   at Newtonsoft.Json.Serialization.JsonSerializerInternalReader.ReadForType(JsonReader reader, JsonContract contract, Boolean hasConverter)
   at Newtonsoft.Json.Serialization.JsonSerializerInternalReader.Deserialize(JsonReader reader, Type objectType, Boolean checkAdditionalContent)
   at Newtonsoft.Json.JsonSerializer.DeserializeInternal(JsonReader reader, Type objectType)
   at Newtonsoft.Json.JsonConvert.DeserializeObject[T](String value, JsonSerializerSettings settings)
   at BambooTray.Services.ServiceInvoker.Invoke[T](InvokeServiceRequest request) in d:\source\github\bambootray\BambooTray.Services\ServiceInvoker.cs:line 67
   at BambooTray.Services.BambooService.GetPlanDetail(String key) in d:\source\github\bambootray\BambooTray.Services\BambooService.cs:line 46
   at BambooTray.App.MainWindow.RefreshBuilds() in d:\source\github\bambootray\BambooTray.App\MainWindow.cs:line 110
   at BambooTray.App.MainWindow.UpdateTimerTick(Object sender, EventArgs e) in d:\source\github\bambootray\BambooTray.App\MainWindow.cs:line 284
   at System.Windows.Forms.Timer.TimerNativeWindow.WndProc(Message& m)
   at System.Windows.Forms.NativeWindow.Callback(IntPtr hWnd, Int32 msg, IntPtr wparam, IntPtr lparam)

--- a/BambooTray.App/BambooTray.App.csproj
+++ b/BambooTray.App/BambooTray.App.csproj
@@ -167,7 +167,7 @@
     <None Include="Resources\BambooGrey.png" />
     <Content Include="BambooIcon.ico" />
     <None Include="Settings.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
