Refactoring and preserve focused item.
1. Refactoring to clean up PreserveSelectedItemGuard class. Added ListViewExtensions.cs.
2. Fixed PreserveSelectedItemGuard to track properly the focused item.

--- a/BambooTray.App/BambooTray.App.csproj
+++ b/BambooTray.App/BambooTray.App.csproj
@@ -84,6 +84,7 @@
     <Compile Include="AddServerWindow.Designer.cs">
       <DependentUpon>AddServerWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="ListViewExtensions.cs" />
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
