--- a/BambooTray.App/BambooTray.App.csproj
+++ b/BambooTray.App/BambooTray.App.csproj
@@ -102,6 +102,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RefreshBuildsBackgroundWorker.cs" />
     <EmbeddedResource Include="AboutWindow.resx">
       <DependentUpon>AboutWindow.cs</DependentUpon>
     </EmbeddedResource>
