--- a/BambooTray.App/BambooTray.App.csproj
+++ b/BambooTray.App/BambooTray.App.csproj
@@ -172,9 +172,6 @@
     <None Include="Resources\BambooYellow4.png" />
     <None Include="Resources\BambooGrey.png" />
     <Content Include="BambooIcon.ico" />
-    <None Include="Settings.config">
-      <SubType>Designer</SubType>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BambooTray.Domain\BambooTray.Domain.csproj">
@@ -189,7 +186,8 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <PropertyGroup>
-    <PostBuildEvent>copy $(ProjectDir)Settings.config $(ProjectDir)$(OutDir)</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
